Minor changes for home, experiement the code and design.

--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -8,13 +8,13 @@ import {ThemeSwitcher} from '../../theme-switcher/theme-switcher';
 <Container>
 	<section class="hero-section__section">
 		<div class="hero-section__text">
-				<h1>Welcome to Odyssey</h1>
+				<h2>Welcome to LeadGen-GPT</h2>
 				<p>
-					A marketing website theme built with <a
-						href="https://astro.build"
+					Simple & Powerful AI-Powered Lead Generation & Management for <a
+						href="https://openai.com/blog/introducing-gpts"
 						target="_blank"
-						rel="noreferrer">Astro</a
-					> and carefully crafted for startups and businesses.
+						rel="noreferrer">OpenAI's GPTs</a
+					> .
 				</p>
 				<div class="hero-btns__container">
 					<Button href="/theme/get-started" customIcon
