--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -31,7 +31,7 @@ import {ThemeSwitcher} from '../../theme-switcher/theme-switcher';
 		<div class="hero-section__image">
 				<picture>
 					<img
-						src="/assets/images/home/classic-hero.jpg"
+						src="/assets/images/home/Chat-GPT-Marketing-1.png"
 						alt="Astro Odyssey"
 						id="home-hero-image"
 					/>
@@ -65,8 +65,8 @@ import {ThemeSwitcher} from '../../theme-switcher/theme-switcher';
 		display: flex;
 	}
 	.hero-section__image img {
-		width: 100%;
-		height: 100%;
+		width: 90%;
+		height: 90%;
 		max-height: 80vh;
 		object-fit: cover;
 		border-radius: var(--theme-shape-radius);
