--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,5 +1,5 @@
 ---
-import { Header, Button, Footer } from '@components/odyssey-theme';
+import { Header, Footer } from '@components/odyssey-theme';
 import Layout from './Base.astro';
 import type { Props as BaseHeadProps } from '../components/head/BaseHead.astro';
 import Logo from '../components/Logo.astro';
@@ -21,7 +21,6 @@ const { seo } = Astro.props as Props;
 		<span slot="logo">
 			<Logo />
 		</span>
-		<Button slot="action-item" href="/theme/get-started">Get Started</Button>
 	</Header>
 	<div id="page">
 		<slot />
@@ -31,9 +30,9 @@ const { seo } = Astro.props as Props;
 		background="var(--theme-surface-1)"
 		color="var(--theme-on-surface-1)"
 		footerLists={footerLists}
-    footerSocials={footerSocials}
+    	footerSocials={footerSocials}
 		copyrightName={settings.name}
-    showLittleSticksPlug={settings.showLittleSticksPlug}
+    	showLittleSticksPlug={settings.showLittleSticksPlug}
 	>
 		<Logo slot="logo" />
 	</Footer>
