--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -27,23 +27,15 @@ const posts = await Astro.glob('./posts/*.mdx').then(posts =>
 );
 
 const seo = {
-	title: 'Blog | Astro Odyssey Theme',
-	description: 'Astro Odyssey Theme Blog Page',
+	title: `Blog | LeadGen GPT, Tool for OpenAI's GPTs`,
+	description: 'Blog Page',
 };
 ---
 
 <Layout {seo}>
 	<Container>
-		<TextCardSection>
-			<h1>Odyssey Blog</h1>
-			<p>
-				View our blog to stay up to date on the latest news about our business.
-				Want to be the first to hear about a new blog post? Join our newsletter!
-			</p>
-			<NewsletterForm />
-		</TextCardSection>
 		<section class="blog-posts-list__section">
-			<h2>Recent Posts</h2>
+			<h3>Recent Posts</h3>
 			<BlogPostsList posts={posts} />
 		</section>
 	</Container>
@@ -53,4 +45,7 @@ const seo = {
 	.blog-posts-list__section {
 		margin: var(--section-margin) auto;
 	}
+	.blog-posts-list__section h3 {
+    text-align: center;
+ }
 </style>
