Center our nav.

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -17,7 +17,7 @@ const { seo } = Astro.props as Props;
 ---
 
 <Layout seo={seo}>
-	<Header rightMenu navData={nav} slot="header">
+	<Header navData={nav} slot="header">
 		<span slot="logo">
 			<Logo />
 		</span>
