--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,14 +49,14 @@ import PlanCard from '../components/cards/PlanCard.astro';
 			   <PlanCard
 				 href="/#"
 				 title="Free $0/mo forver"
-				 description="Good for individuals, with all the necessary features."
-				 features={['3 Forms', '100 AI Calls for form design', 'Unlimited Submissions', '3 Widget Integrated Slack, Email, and WeCom', 'Unlimited Team Members']}
+				 description="Good for individuals."
+				 features={['3 Forms', '100 AI credits / month', 'Unlimited Submissions', '3 Widget Integrated Slack, Email, and WeCom']}
 			   />
 			   <PlanCard
 				 href="/#"
-				 title="Premium $9.9/mo"
+				 title="Pro $9.9/mo"
 				 description="For freelancers and startups."
-				 features={['Unlimited AI Generated Form Design','Unlimited Forms', 'Email support', 'Webhooks and more Widgets comming, CRM/Martech Stack']}
+				 features={['Unlimited Forms','Unlimited AI credits', 'Make integration and more Widgets comming','Email support']}
 			   />
 			</div>
 		   </section>		
