Feature card link.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,19 +24,19 @@ import PlanCard from '../components/cards/PlanCard.astro';
 			<p>Unlock the full potential of your OpenAI GPTs with LeadGen-GPT.</p>
 			<div class="feature-card__grid">
 				<FeatureCard
-					href="/theme/get-started"
+					href="/#"
 					imgSrc="/assets/images/home/screenshots/create-form"
 					title="Tell Your Requirements"
 				>
 				</FeatureCard>
 				<FeatureCard
-					href="/theme/style-guide"
+					href="/#"
 					imgSrc="/assets/images/home/screenshots/api"
 					title="Connect Your GPTs"
 				>
 				</FeatureCard>
 				<FeatureCard
-					href="/theme/style-guide"
+					href="/#"
 					imgSrc="/assets/images/home/screenshots/dashboard"
 					title="Receive Notifications and Monitor"
 				>
