--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,6 +14,7 @@ const { seo } = Astro.props;
 	<head>
 		<BaseHead {...seo} />
 	</head>
+	<script src="//code.tidio.co/yd5ph2murpdwmhwddpg3oyuaw95yhti4.js" async></script>
 	<body>
 		<SkipLink />
     <slot name="announcement-bar" />
