--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import PlanCard from '../components/cards/PlanCard.astro';
 			<div class="plan-card__grid">
 			   <PlanCard
 				 href="/#"
-				 title="Free $0/mo forver"
+				 title="Free $0/mo forever"
 				 description="Good for individuals."
 				 features={['3 Forms', '100 AI credits / month', 'Unlimited Submissions', '3 Widget Integrated Slack, Email, and WeCom']}
 			   />
