Try getwaitlist code inside index.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,10 @@ import PlanCard from '../components/cards/PlanCard.astro';
 				 features={['Unlimited Forms','Unlimited AI credits', 'Make integration and more Widgets comming','Email support']}
 			   />
 			</div>
-		   </section>		
+		   </section>
+		   <div id="getWaitlistContainer" data-waitlist_id="16284" data-widget_type="WIDGET_1"></div>
+<link rel="stylesheet" type="text/css" href="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.css"/>
+<script src="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.js"></script>		
 	</Container>
 </Layout>
 
